Fixed semantic error

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
         <input type="text" placeholder="Type new task" class="mainInput" >
         <input type="submit" value="ADD TASK" class="button">
       </div>
-      <div class="taskContainer"></div>
+      <ul class="taskContainer"></ul>
     </div>
     <script src="dist/common.js"></script>
   </body>
