--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <title>ToDo</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../app/css/main.css">
+    <link rel="stylesheet" href="app/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -16,6 +16,6 @@
       </div>
       <ul class="taskContainer"></ul>
     </div>
-    <script src="dist/common.js"></script>
+    <script src="app/dist/common.js"></script>
   </body>
 </html>
